--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# Password/Credentials
+.pwd
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
 .DS_Store
