fixed *.proto an schema missmatch and updated diagrams

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -129,6 +129,8 @@ services:
       - ksqldb-server
     entrypoint: /bin/sh
     tty: true
+    volumes:
+      - ./kSQL:/data
 
   ksql-datagen:
     image: confluentinc/ksqldb-examples:7.6.1
