--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 # Password/Credentials
 .pwd
 .pwdloc
+.pwdmongoatlas
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
