--- a/loc_app.json
+++ b/loc_app.json
@@ -8,6 +8,7 @@
     "vatrate": 0.14,                                # Sales tax
     "SeedFile": "sit_seed.json",                    # File containing seed data.
     "Store": 0,                                     # if <> 0 then this value is used to selected store at that position from file, otherwise it's random
+    "Terminals": 20,                                # Number of possible checkout points/terminals
     "KafkaEnabled": 1,                              # Are we going to post onto Kafka,
     "MongoAtlasEnabled": 0,                         # Are we going to post docs directly into a Mongo Atlas.
     "Json_to_file": 0,                              # Do we want to store basket created to a file
