--- a/pb_app.json
+++ b/pb_app.json
@@ -1,13 +1,14 @@
 {
     "echoConfig": 1,                                # echo this file to the terminal
     "debuglevel": 0,                                # 0=no logging, up to 4 ull logging enabled
-    "testsize": 1000,                                 # if 0 then we set it to very large value (10000000000000) to simply continue running,
+    "testsize": 100000,                                 # if 0 then we set it to very large value (10000000000000) to simply continue running,
                                                     # Make the Batch_size size a factor of the testsize when Mongo inserts are enabled
-    "sleep": 0,                                     # Milliseconds, aka 5000 => 5 seconds. this mean we will sleep between 0 and 5000 between payload creates.
+    "sleep": 100,                                     # Milliseconds, aka 5000 => 5 seconds. this mean we will sleep between 0 and 5000 between payload creates.
                                                     # setting it to 0 disables is.
     "vatrate": 0.14,                                # Sales tax
     "SeedFile": "sit_seed.json",                    # File containing seed data.
     "Store": 0,                                     # if <> 0 then this value is used to selected store at that position from file, otherwise it's random
+    "Terminals": 20,                                # Number of possible checkout points/terminals
     "KafkaEnabled": 1,                              # Are we going to post onto Kafka,
     "MongoAtlasEnabled": 0,                         # Are we going to post docs directly into a Mongo Atlas.
     "Json_to_file": 0,                              # Do we want to store basket created to a file
