--- a/devlab_kafka/docker-compose.yml
+++ b/devlab_kafka/docker-compose.yml
@@ -1,5 +1,6 @@
 version: '2'
 services:
+
   broker:
     image: confluentinc/cp-kafka:7.6.1
     hostname: broker
@@ -42,8 +43,11 @@ services:
       SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
 
   connect:
+    build:
+      context: ./connect
+      dockerfile: Dockerfile
+    image: kafka-connect-custom:1.2
     # image: cnfldemos/cp-server-connect-datagen:0.6.4-7.6.0
-    image: kafka-connect-custom:1.1
     hostname: connect
     container_name: connect
     depends_on:
@@ -122,6 +126,7 @@ services:
 
   ksqldb-cli:
     image: confluentinc/cp-ksqldb-cli:7.6.1
+    hostname: ksqldb-cli
     container_name: ksqldb-cli
     depends_on:
       - broker
@@ -130,44 +135,8 @@ services:
     entrypoint: /bin/sh
     tty: true
     volumes:
-      - ./kSQL:/data
-
-  ksql-datagen:
-    image: confluentinc/ksqldb-examples:7.6.1
-    hostname: ksql-datagen
-    container_name: ksql-datagen
-    depends_on:
-      - ksqldb-server
-      - broker
-      - schema-registry
-      - connect
-    command: "bash -c 'echo Waiting for Kafka to be ready... && \
-                       cub kafka-ready -b broker:29092 1 40 && \
-                       echo Waiting for Confluent Schema Registry to be ready... && \
-                       cub sr-ready schema-registry 8081 40 && \
-                       echo Waiting a few seconds for topic creation to finish... && \
-                       sleep 11 && \
-                       tail -f /dev/null'"
-    environment:
-      KSQL_CONFIG_DIR: "/etc/ksql"
-      STREAMS_BOOTSTRAP_SERVERS: broker:29092
-      STREAMS_SCHEMA_REGISTRY_HOST: schema-registry
-      STREAMS_SCHEMA_REGISTRY_PORT: 8081
-
-  rest-proxy:
-    image: confluentinc/cp-kafka-rest:7.6.1
-    depends_on:
-      - broker
-      - schema-registry
-    ports:
-      - 8082:8082
-    hostname: rest-proxy
-    container_name: rest-proxy
-    environment:
-      KAFKA_REST_HOST_NAME: rest-proxy
-      KAFKA_REST_BOOTSTRAP_SERVERS: 'broker:29092'
-      KAFKA_REST_LISTENERS: "http://0.0.0.0:8082"
-      KAFKA_REST_SCHEMA_REGISTRY_URL: 'http://schema-registry:8081'
+      - ./:/data
+    
 
   flink-sql-client:
     image: cnfldemos/flink-sql-client-kafka:1.16.0-scala_2.12-java11
@@ -199,13 +168,14 @@ services:
     depends_on:
       - flink-jobmanager
     command: taskmanager
-    scale: 2
+    deploy:
+      replicas: 2
     environment:
       - |
         FLINK_PROPERTIES=
         jobmanager.rpc.address: flink-jobmanager
         taskmanager.numberOfTaskSlots: 10
-        
+
   kafkacat-cli:
     image: confluentinc/cp-kcat:latest
     hostname: kafkacat-cli
@@ -216,29 +186,38 @@ services:
       - connect
     entrypoint: /bin/bash -i
     tty: true
+      
+  mongodb:
+    image: mongodb/mongodb-atlas-local:latest
+    hostname: mongodb
+    container_name: mongodb
+    restart: no
+    ports:
+      - "27017:27017" 
+      
+  postgresql:
+    image: postgres:14
+    hostname: postgresql
+    container_name: postgresql
+    restart: no
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_PASSWORD: abfr24
 
   mysql:
     image: mysql:8.0
     hostname: mysql
     container_name: mysql
+    restart: no
     ports:
       - "3306:3306"
-    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: abfr24
 
-  postgresql:
-    image: postgres:14
-    hostname: postgresql
-    container_name: postgresql
-    ports:
-      - "5432:5432"
-    environment:
-      POSTGRES_PASSWORD: abfr24
-  
-  mongo:
-    image: mongodb/mongodb-atlas-local:latest
-    hostname: mongodb
-    container_name: mongodb
-    ports:
-      - "27017:27017" 
+# Without a network explicitly defined, you hit this Hive/Thrift error
+# java.net.URISyntaxException Illegal character in hostname
+# https://github.com/TrivadisPF/platys-modern-data-platform/issues/231
+networks:
+  default:
+     name: devlab_kavfka_default
