combined Topics and schema, modified connector for avro_salesbaskets_x, avro_salespayments_x and avro_salescompleted_x, removed primary keys from avro_salesbaskets_x and avro_salespayments_x

--- a/devlab/docker-compose.yml
+++ b/devlab/docker-compose.yml
@@ -220,4 +220,4 @@ services:
 # https://github.com/TrivadisPF/platys-modern-data-platform/issues/231
 networks:
   default:
-     name: devlab_kavfka_default
+     name: devlab_default
